<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="219dp"
        android:layout_height="91dp"
        android:layout_marginTop="56dp"
        android:text="@string/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edit_message2"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterUsername" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="40dp"
        android:text="@string/button_label1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <EditText
        android:id="@+id/enterUsername"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/edit_message1"
        android:inputType="textWebEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_label2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton" />

    <Button
        android:id="@+id/guestButton"
        android:layout_width="113dp"
        android:layout_height="39dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_label3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <Button
        android:id="@+id/LogOutButton"
        android:layout_width="113dp"
        android:layout_height="39dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:text="@string/log_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestButton" />
</android.support.constraint.ConstraintLayout>